--- a/products/products.html
+++ b/products/products.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <a href="../index/index.html"><img src="/images/logo_haurimton.png" alt="." class="logo"></a>
+            <a href="../index/index.html"><img src="../images/logo_haurimton.png" alt="." class="logo"></a>
             <ul class="navmenu">
                 <li class="nav-item"><a href="../index/index.html" class="nav-link">Inicio</a></li>
                 <li class="nav-item"><a href="../about/about.html" class="nav-link">Sobre Nosotros</a></li>
